Bug 321474 - File layer : stored path is absolute
Summary: File layer : stored path is absolute
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-21 17:57 UTC by animtim
Modified: 2013-06-24 12:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2013-06-21 17:57:08 UTC
when adding a file-layer, its saved file path is absolute, and so after moving my folder with all the files somewhere else (like for a backup..), re-opening the file including a file-layer fails to open.
It would be better to have file path relative.. Or at least don't completely fail to open the file if a file layer source is missing, so one could still fix the file layer manually.

Reproducible: Always
Comment 1 Halla Rempt 2013-06-22 08:10:10 UTC
Ack, thanks for the report.
Comment 2 Halla Rempt 2013-06-24 12:13:05 UTC
Git commit bde7ee3418fcb91232bcb5a220abbcbc66d78780 by Boudewijn Rempt.
Committed on 24/06/2013 at 12:12.
Pushed by rempt into branch 'master'.

Use relative paths for file layers

M  +17   -4    krita/ui/dialogs/kis_dlg_file_layer.cpp
M  +2    -1    krita/ui/dialogs/kis_dlg_file_layer.h
M  +23   -12   krita/ui/kis_file_layer.cpp
M  +4    -3    krita/ui/kis_file_layer.h
M  +10   -2    krita/ui/kis_layer_manager.cc
M  +4    -1    krita/ui/kra/kis_kra_loader.cpp
M  +1    -1    krita/ui/kra/kis_kra_saver.cpp
M  +15   -15   krita/ui/kra/kis_kra_savexml_visitor.cpp
M  +2    -2    krita/ui/kra/kis_kra_savexml_visitor.h
M  +1    -1    krita/ui/tests/kis_kra_savexml_visitor_test.cpp

http://commits.kde.org/calligra/bde7ee3418fcb91232bcb5a220abbcbc66d78780
Comment 3 Halla Rempt 2013-06-24 12:21:39 UTC
Git commit fb06e0fabd0134d0382f4865951c9441613fbf15 by Boudewijn Rempt.
Committed on 24/06/2013 at 12:12.
Pushed by rempt into branch 'calligra/2.7'.

Use relative paths for file layers

Conflicts:
	krita/ui/kis_layer_manager.cc

M  +17   -4    krita/ui/dialogs/kis_dlg_file_layer.cpp
M  +2    -1    krita/ui/dialogs/kis_dlg_file_layer.h
M  +23   -12   krita/ui/kis_file_layer.cpp
M  +4    -3    krita/ui/kis_file_layer.h
M  +11   -4    krita/ui/kis_layer_manager.cc
M  +9    -9    krita/ui/kis_layer_manager.h
M  +4    -1    krita/ui/kra/kis_kra_loader.cpp
M  +1    -1    krita/ui/kra/kis_kra_saver.cpp
M  +15   -15   krita/ui/kra/kis_kra_savexml_visitor.cpp
M  +2    -2    krita/ui/kra/kis_kra_savexml_visitor.h
M  +1    -1    krita/ui/tests/kis_kra_savexml_visitor_test.cpp

http://commits.kde.org/calligra/fb06e0fabd0134d0382f4865951c9441613fbf15