Use relative paths for file layers

BUG:321474