krita/ui/kra/kis_kra_savexml_visitor.h
@@ -29,7 +29,7 @@
 class KRITAUI_EXPORT KisSaveXmlVisitor : public KisNodeVisitor
 {
 public:
-    KisSaveXmlVisitor(QDomDocument doc, const QDomElement & element, quint32 &count, bool root = false);
+    KisSaveXmlVisitor(QDomDocument doc, const QDomElement & element, quint32 &count, const QString &url);
 
     void setSelectedNodes(vKisNodeSP selectedNodes);
 
@@ -67,7 +67,7 @@ private:
     QDomDocument m_doc;
     QDomElement m_elem;
     quint32 &m_count;
-    bool m_root;
+    QString m_url;
 };
 
 #endif
